--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Ethan
+title: Ethan Xiong
 logo: 
-description: We are very good student
+description: Aspiring Engineering Student
 #show_downloads: true
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
