--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Ethan Xiong
 logo: 
-description: Aspiring Engineering Student
+description: Ethan Xiong
 #show_downloads: true
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
