--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,4 @@
 title: Ethan Xiong
-logo: 
-description: Ethan Xiong
-#show_downloads: true
-remote_theme: pages-themes/cayman@v0.2.0
-plugins:
-- jekyll-remote-theme3
+description: Aspiring Engineering Student
+show_downloads: true
+theme: jekyll-theme-cayman
