--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
 title: Ethan Xiong
 description: Aspiring Engineering Student
 show_downloads: true
-theme: jekyll-theme-cayman
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+- jekyll-remote-theme
