--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
 title: Ethan Xiong
 description: text
-show_downloads: true
-theme: jekyll-theme-cayman
+#show_downloads: true
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+- jekyll-remote-theme
