--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Ethan Xiong
-description: text
+description: Aspiring Engineering Student
 #show_downloads: true
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
