--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,9 @@ description: Aspiring Engineering Student
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme
+
+defaults:
+  - scope:
+      path: "*.md"
+    values:
+      layout: page
