--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,12 @@
 title: Ethan Xiong
+#logo: jfkshdaihufha
 description: Aspiring Engineering Student
 #show_downloads: true
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme
+
+navigation:
+  - {file: "index.md", title: "Index", icon: home}
+  - {file: "aboutme.md", title: "About Me", icon: box}
+  - {file: "console.md", title: "Handheld Console", icon: box}
